[FEAT] 로그인 상태 전역 관리 및 admin 메뉴 추가

--- a/src/main/frontend/src/styles/MyNavbar.css
+++ b/src/main/frontend/src/styles/MyNavbar.css
@@ -12,9 +12,13 @@
   color: white !important;
   width: 110px;
   text-align: center;
-  font-size: small;
+  box-sizing: border-box;
 }
 
 .nav-link:hover {
   box-shadow: inset 0 -4px 0 0 #fff;
+}
+
+.active-link {
+  font-weight: bold;
 }
