[REFACT] car 코드 리팩토링 및 css 수정

--- a/src/main/frontend/src/components/Pagination.css
+++ b/src/main/frontend/src/components/Pagination.css
@@ -14,3 +14,9 @@
     font-weight: bold;
     color: #CD853F;
 }
+
+.pagination-container li.previous a,
+.pagination-container li.next a{
+    color: black;
+    text-decoration: none;
+}
