[FIX][B-05, D-01] 주차장 예약 내역 프론트엔드 변경 내용 반영 및 수정

--- a/src/main/frontend/src/pages/BookListPage.css
+++ b/src/main/frontend/src/pages/BookListPage.css
@@ -1,7 +1,10 @@
 .gridContainer{
     display: grid;
-    grid-template-columns: 600px;
+    grid-template-columns: 50% 50%;
     grid-column-gap: 50px;
+    place-items: center;
+    margin-left: 20%;
+    margin-right: 20%;
  }
 
 .bookState{
@@ -25,4 +28,5 @@
 .buttons{
     margin-left: 10px;
     margin-bottom: 10px;
+    border: 0.5px solid gray;
 }
