--- a/src/main/frontend/src/pages/BookPage.css
+++ b/src/main/frontend/src/pages/BookPage.css
@@ -28,7 +28,15 @@
     margin: 30px 30px;
 }
 
-.button {
+.linkButton{
+    width: 60%;
+    height: 50px;
+    margin: 30px 30px;
+    background-color: white;
+    border: 0.5px solid gray;
+}
+
+.reserveButton {
     width: 500px;
     height: 50px;
     margin: 10px 10px;
@@ -36,5 +44,5 @@
     color: white;
     border: none;
     border-radius: 10px;
-    background-color: burlywood;
+    background-color: gray;
 }
