[FEAT][B-05] 프론트엔드 차량 입차 추가 및 관련 사항 수정

--- a/src/main/frontend/src/pages/BookListPage.css
+++ b/src/main/frontend/src/pages/BookListPage.css
@@ -19,7 +19,7 @@
 .bookContainer{
     border: 0.5px solid gray;
     border-radius: 5px;
-    width: 500px;
+    width: auto;
     margin-top: 10px;
     margin-bottom: 10px;
     padding: 10px;
