--- a/src/main/frontend/src/pages/LoginPage.module.css
+++ b/src/main/frontend/src/pages/LoginPage.module.css
@@ -1,6 +1,6 @@
 .login-container {
     max-width: 400px;
-    margin: 0 auto;
+    margin: 120px auto;
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 8px;
@@ -13,7 +13,7 @@
 }
 
 .login-container input {
-    width: 94.5%;
+    width: 100%;
     padding: 10px;
     margin-bottom: 10px;
     border: 1px solid #ccc;
