--- a/src/main/frontend/src/pages/Adminpage.css
+++ b/src/main/frontend/src/pages/Adminpage.css
@@ -41,8 +41,54 @@ body {
     border: none;
     border-radius: 5px;
     padding: 5px;
+    margin-right:5px;
     height: 50%;
     color: #FFA07A;
+    cursor: pointer;
+    &:hover {
+        color: white;
+        background-color: #FFA07A;
+    }
+}
+
+.adminBtnContainer {
+    display: flex;
+}
+
+.modalAdminOverlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: lightgrey;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.modalAdminContent {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    border-radius: 5px;
+    width: 60%;
+    max-width: 600px;
+    background-color: white;
+}
+
+.adminCloseBtn {
+    display: flex;
+    justify-content: center;
+    background: #FFA07A;
+    border: none;
+    border-radius: 5px;
+    padding: 5px;
+    margin-right:5px;
+    width: 10%;
+    height: 50%;
+    color: white;
     cursor: pointer;
     &:hover {
         color: white;
