--- a/src/main/frontend/src/pages/AdminParkingAddPage.css
+++ b/src/main/frontend/src/pages/AdminParkingAddPage.css
@@ -1,89 +1,89 @@
 .AdminParkingAddPage {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 10px;
 }
 
 .APAHeader {
-    width: 90%;
+  width: 90%;
 }
 
-
 .APABody {
-    width: 90%;
-    display: flex;
-    justify-content: center;
-    margin-bottom: 20px;
+  width: 90%;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
 }
 
 .parkingForm {
-    width: 90%;
+  width: 90%;
 }
 
 .parkingFormInput {
-    margin-bottom: 8px;
-    width: 100%;
+  margin-bottom: 8px;
+  width: 100%;
 }
 
 .parkingFromLabel {
-    margin-right: 5px;
+  margin-right: 5px;
 }
 
 .parkingFromControl {
-    border: 1px solid lightgrey;
-    border-radius: 5px;
-    width: 100%;
-    height: 30px;
+  border: 1px solid lightgrey;
+  border-radius: 5px;
+  width: 100%;
+  height: 30px;
 }
 
 .parkingFormAddBtn {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    background: #CD853F;
-    border: none;
-    border-radius: 5px;
-    padding: 5px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  background: #cd853f;
+  border: none;
+  border-radius: 5px;
+  padding: 5px;
+  color: white;
+  cursor: pointer;
+  &:hover {
     color: white;
-    cursor: pointer;
-    &:hover {
-        color: white;
-        background-color: #FFA07A;
-    }
+    background-color: #ffa07a;
+  }
 }
 
 .addressPostBtn {
-    margin-bottom: 3px;
-    border: none;
-    border-radius: 5px;
+  margin-bottom: 3px;
+  border: none;
+  border-radius: 5px;
+  color: white;
+  background: #cd853f;
+  cursor: pointer;
+  &:hover {
     color: white;
-    background: #CD853F;
-    cursor: pointer;
-    &:hover {
-        color: white;
-        background-color: #FFA07A;
-    }
+    background-color: #ffa07a;
+  }
 }
 
 .modalOverlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.5);
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .modalContent {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    padding: 20px;
-    border-radius: 5px;
-    width: 60%;
-    max-width: 600px;
-    background-color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 20px;
+  border-radius: 5px;
+  width: 60%;
+  max-width: 600px;
+  background-color: white;
 }
