--- a/src/main/frontend/src/pages/Adminpage.css
+++ b/src/main/frontend/src/pages/Adminpage.css
@@ -1,97 +1,98 @@
 body {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 .adminPage {
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: #CD853F;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #cd853f;
+  padding-top: 10px;
 }
 
 .adminHeader {
-    color: white;
-    width: 90%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  color: white;
+  width: 90%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .adminBody {
-    width: 90%;
-    background-color: white;
-    border-radius: 10px;
-    display: flex;
-    justify-content: center;
+  width: 90%;
+  background-color: white;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
 }
 
 .parkingListContainer {
-    width: 95%;
-    padding-top: 10px;
-    padding-bottom: 10px;
+  width: 95%;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 .parkingAddBtn {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    background: white;
-    border: none;
-    border-radius: 5px;
-    padding: 5px;
-    margin-right:5px;
-    height: 50%;
-    color: #FFA07A;
-    cursor: pointer;
-    &:hover {
-        color: white;
-        background-color: #FFA07A;
-    }
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  background: white;
+  border: none;
+  border-radius: 5px;
+  padding: 5px;
+  margin-right: 5px;
+  height: 50%;
+  color: #ffa07a;
+  cursor: pointer;
+  &:hover {
+    color: white;
+    background-color: #ffa07a;
+  }
 }
 
 .adminBtnContainer {
-    display: flex;
+  display: flex;
 }
 
 .modalAdminOverlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: lightgrey;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: lightgrey;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .modalAdminContent {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px;
-    border-radius: 5px;
-    width: 60%;
-    max-width: 600px;
-    background-color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+  border-radius: 5px;
+  width: 60%;
+  max-width: 600px;
+  background-color: white;
 }
 
 .adminCloseBtn {
-    display: flex;
-    justify-content: center;
-    background: #FFA07A;
-    border: none;
-    border-radius: 5px;
-    padding: 5px;
-    margin-right:5px;
-    width: 10%;
-    height: 50%;
+  display: flex;
+  justify-content: center;
+  background: #ffa07a;
+  border: none;
+  border-radius: 5px;
+  padding: 5px;
+  margin-right: 5px;
+  width: 10%;
+  height: 50%;
+  color: white;
+  cursor: pointer;
+  &:hover {
     color: white;
-    cursor: pointer;
-    &:hover {
-        color: white;
-        background-color: #FFA07A;
-    }
+    background-color: #ffa07a;
+  }
 }
