--- a/src/main/frontend/src/pages/BookListPage.css
+++ b/src/main/frontend/src/pages/BookListPage.css
@@ -1,6 +1,6 @@
 .gridContainer{
     display: grid;
-    grid-template-columns: 50% 50%;
+    grid-template-columns: 100%;
     grid-column-gap: 50px;
     place-items: center;
     margin-left: 20%;
@@ -19,7 +19,7 @@
 .bookContainer{
     border: 0.5px solid gray;
     border-radius: 5px;
-    width: auto;
+    width: 80%;
     margin-top: 10px;
     margin-bottom: 10px;
     padding: 10px;
