--- a/src/main/frontend/src/pages/BookListPage.css
+++ b/src/main/frontend/src/pages/BookListPage.css
@@ -1,32 +1,72 @@
-.gridContainer{
-    display: grid;
-    grid-template-columns: 100%;
-    grid-column-gap: 50px;
-    place-items: center;
-    margin-left: 20%;
-    margin-right: 20%;
- }
+.gridContainer {
+  display: grid;
+  grid-template-columns: 100%;
+  grid-column-gap: 50px;
+  place-items: center;
+  margin-left: 20%;
+  margin-right: 20%;
+}
 
-.bookState{
-    color: white;
-    background-color: green;
+.bookState {
+  color: white;
+  background-color: #fc6c00;
+  font-weight: bold;
+  border-radius: 10px;
+  padding: 4px;
+  box-shadow: 1px 1px 1px 1px #fc6c00;
+}
+
+.bookContainer {
+  border-bottom: 1px solid rgb(128, 128, 128);
+  width: 80%;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  padding: 10px;
+}
+
+.detailButtons {
+  margin: 5px 5px 10px 5px;
+  padding: 5px;
+  border: 1px solid #fc6c00;
+  border-radius: 8px;
+  background: none;
+  color: #fc6c00;
+  font-size: 16px;
+
+  &:hover {
     font-weight: bold;
-    border-radius: 10px;
-    padding: 4px;
-    box-shadow: 1px 1px 1px 1px green;
+  }
 }
 
-.bookContainer{
-    border: 0.5px solid gray;
-    border-radius: 5px;
-    width: 80%;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    padding: 10px;
+.bookBtnContainer {
+  display: flex;
+  justify-content: flex-end;
 }
 
-.buttons{
-    margin-left: 10px;
-    margin-bottom: 10px;
-    border: 0.5px solid gray;
+.bookName {
+  margin: 10px 0 15px 0;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.bookHeader {
+  margin: 20px 0;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.bookBackBtn {
+  font-size: 20px;
+  display: flex;
+  align-items: center;
+}
+
+.bookArrowBackIcon {
+  margin-right: 10px;
+  &:hover {
+    cursor: pointer;
+  }
 }
