--- a/src/main/frontend/src/pages/LoginPage.module.css
+++ b/src/main/frontend/src/pages/LoginPage.module.css
@@ -1,56 +1,56 @@
 .login-container {
-    max-width: 400px;
-    margin: 120px auto;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  max-width: 400px;
+  margin: 120px auto;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .login-container h1 {
-    text-align: center;
-    color: #333;
+  text-align: center;
+  color: #333;
 }
 
 .login-container input {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
 }
 
 .login-container button {
-    width: 100%;
-    padding: 10px;
-    background-color: #4caf50;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
+  width: 100%;
+  padding: 10px;
+  background-color: #fc6c00;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
 }
 
 .login-container button:hover {
-    background-color: #45a049;
+  font-weight: bold;
 }
 
 .login-container .home-button {
-    width: 100%;
-    padding: 10px;
-    background-color: #4c87f5;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    margin-top: 10px;
-    text-align: center;
+  width: 100%;
+  padding: 10px;
+  background: none;
+  color: #fc6c00;
+  border: #fc6c00 1px solid;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-top: 10px;
+  text-align: center;
 }
 
 .login-container .home-button:hover {
-    background-color: #3c76d5;
+  font-weight: bold;
 }
 
 .login-container .home-button a {
-    color: white;
-    text-decoration: none;
+  color: white;
+  text-decoration: none;
 }
