--- a/src/main/frontend/src/pages/MyPage.module.css
+++ b/src/main/frontend/src/pages/MyPage.module.css
@@ -1,38 +1,91 @@
 /* MyPage.module.css */
 
 .mypage-container {
-    max-width: 600px;
-    margin: auto;
-    padding: 20px;
-    text-align: center;
+  max-width: 600px;
+  margin: auto;
+  padding: 20px;
 }
 
 .mypage-container h1 {
-    margin-bottom: 20px;
+  margin-bottom: 20px;
 }
 
 .mypage-container button {
-    margin-top: 15px;
-    padding: 10px;
-    cursor: pointer;
-    background-color: #4caf50;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    margin-right: 10px;
-    transition: background-color 0.3s ease;
+  padding: 10px;
+  cursor: pointer;
+  color: #fc6c00;
+  border: none;
+  transition: backgroundcolor 0.3s ease;
+  background: none;
 }
 
 .mypage-container button:hover {
-    background-color: #45a049;
+  font-weight: bold;
+}
+
+.mypage-container .hi-text {
+  text-align: start;
+  font-size: 20px;
+  color: #424242;
+}
+
+.mypage-container .user-img {
+  width: 60px;
+  height: 60px;
+}
+
+.mypage-container .user-container {
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: column;
+  margin: 30px 0 30px 0;
+}
+
+.user-container .user-img-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.user-container .user-id-text {
+  font-size: 30px;
+  font-weight: bold;
 }
 
 .mypage-container .home-button {
-    margin-top: 20px;
-    background-color: #3498db;
+  margin-top: 20px;
+  padding: 0;
 }
 
 .mypage-container .home-button:hover {
-    background-color: #2980b9;
+  font-weight: bold;
 }
 
+.mypage-container .list-container {
+  display: flex;
+  flex-direction: column;
+  border-bottom: #fc6c00 solid 1px;
+}
+
+.mypage-container .list {
+  padding: 12px 5px 12px 5px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: #424242;
+  font-size: 20px;
+  border-top: #fc6c00 solid 1px;
+  border-collapse: collapse;
+}
+
+.mypage-container .list:hover {
+  cursor: pointer;
+  background-color: #f5f5f5;
+}
+
+.mypage-container .btn-container {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 20px;
+}
