--- a/src/main/frontend/src/styles/MyNavbar.css
+++ b/src/main/frontend/src/styles/MyNavbar.css
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 100%;
 }
 
 .navbar-nav {
@@ -10,7 +11,6 @@
 
 .nav-link {
   color: white !important;
-  width: 110px;
   text-align: center;
   box-sizing: border-box;
 }
