--- a/src/main/frontend/src/components/ParkingList.css
+++ b/src/main/frontend/src/components/ParkingList.css
@@ -1,35 +1,64 @@
 .parkingSearchContainer {
-    width: 40%;
-    height: 30px;
-    margin-top: 10px;
-    margin-bottom: 10px;
+  height: 30px;
+  margin: 10px 0;
+  display: flex;
+  justify-content: space-between;
 }
 
 .parkingSearch {
-    width: 100%;
-    height: 100%;
-    border: 1.5px solid black;
-    border-radius: 5px;
-    padding-left: 3px;
+  width: 250px;
+  height: 100%;
+  border: 1.5px solid black;
+  border-radius: 5px;
+  padding-left: 3px;
 }
 
 .parkingList {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .parkingContainer {
-    padding: 3px;
-    margin-bottom: 5px;
-    border-bottom: 2px solid lightgrey;
-    color: black;
-    text-decoration: none;
+  padding: 3px;
+  margin-bottom: 5px;
+  border-bottom: 2px solid lightgrey;
+  color: black;
+  text-decoration: none;
 }
 
 .parkingName {
-    font-size: 28px;
+  font-size: 28px;
 }
 
 .parkingAddress {
-    font-size: 20px;
+  font-size: 20px;
+}
+
+.parkingLoadText {
+  font-size: 20px;
+  color: #fc6c00;
+}
+
+.parkingSearchBtn {
+  border: none;
+  background-color: #fc6c00;
+  margin: 0 10px;
+  border-radius: 7px;
+  color: white;
+  &:hover {
+    cursor: pointer;
+    font-weight: bold;
+  }
+}
+
+.parkingFullBtn {
+  border: #fc6c00 1px solid;
+  background: none;
+  margin: 0 10px;
+  border-radius: 7px;
+  color: #fc6c00;
+  &:hover {
+    cursor: pointer;
+    font-weight: bold;
+  }
 }
