--- a/src/main/frontend/src/pages/AdminParkingDetailPage.module.css
+++ b/src/main/frontend/src/pages/AdminParkingDetailPage.module.css
@@ -1,14 +1,14 @@
 .ParkingDetailPage {
-  height: 100vh;
+  height: 90vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: #cd853f;
+  background-color: #f5f5f5;
 }
 
 .parkingDetailContainer {
-  margin-top: 20px;
+  margin-top: 15px;
   width: 90%;
   background-color: white;
   border-radius: 10px;
@@ -61,28 +61,34 @@
   height: 40px;
 }
 
-.modeEditIcon {
+.modeEditBtn {
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  background: none;
-  border: none;
-  margin-right: 5px;
+  background-color: #fc6c00;
+  border: #fc6c00 1px solid;
+  border-radius: 7px;
+  padding: 5px;
+  margin-right: 10px;
   cursor: pointer;
+  color: white;
   &:hover {
-    color: #ffa07a;
+    font-weight: bold;
   }
 }
 
-.deleteIcon {
+.deleteBtn {
   display: flex;
   justify-content: flex-end;
   align-items: center;
   background: none;
-  border: none;
+  border: #fc6c00 1px solid;
+  border-radius: 7px;
+  padding: 5px;
   cursor: pointer;
+  color: #fc6c00;
   &:hover {
-    color: #ffa07a;
+    font-weight: bold;
   }
 }
 
@@ -97,5 +103,7 @@
 }
 
 .arrowBackIcon {
-  cursor: pointer;
+  &:hover {
+    cursor: pointer;
+  }
 }
