--- a/src/main/frontend/src/pages/Adminpage.module.css
+++ b/src/main/frontend/src/pages/Adminpage.module.css
@@ -8,7 +8,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #cd853f;
+  background-color: #f5f5f5;
   padding-top: 10px;
 }
 
@@ -95,4 +95,10 @@ body {
     color: white;
     background-color: #ffa07a;
   }
+}
+
+.largeBoldText {
+  font-size: 40px;
+  font-weight: bold;
+  color: #fc6c00;
 }
