--- a/src/main/frontend/src/components/ParkingList.module.css
+++ b/src/main/frontend/src/components/ParkingList.module.css
@@ -3,12 +3,12 @@
   margin: 10px 0;
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .parkingSearch {
-  width: 250px;
   height: 100%;
-  border: 1.5px solid black;
+  border: 1px solid #424242;
   border-radius: 5px;
   padding-left: 3px;
 }
@@ -24,6 +24,8 @@
   border-bottom: 2px solid lightgrey;
   color: black;
   text-decoration: none;
+  display: flex;
+  justify-content: space-between;
 }
 
 .parkingName {
@@ -53,7 +55,7 @@
 
 .parkingFullBtn {
   border: #fc6c00 1px solid;
-  background: none;
+  background-color: white;
   margin: 0 10px;
   border-radius: 7px;
   color: #fc6c00;
@@ -61,4 +63,42 @@
     cursor: pointer;
     font-weight: bold;
   }
+}
+
+.isActive {
+  display: flex;
+  align-items: center;
+  margin: 0 10px;
+}
+
+.parkingDetailIsActive {
+  color: #429cf5;
+  font-size: 18px;
+}
+
+.parkingDetailIsNotActive {
+  color: #ff3233;
+  font-size: 18px;
+}
+
+.searchContainer {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.selectKeyword {
+  margin-right: 5px;
+}
+
+.select {
+  margin: 0 5px;
+  border-radius: 5px;
+  border: 1px #424242 solid;
+}
+
+.noneParking {
+  font-size: 20px;
+  font-weight: bold;
+  margin: 20px 0;
 }
