--- a/src/main/frontend/src/pages/AdminParkingDetailPage.module.css
+++ b/src/main/frontend/src/pages/AdminParkingDetailPage.module.css
@@ -1,16 +1,14 @@
 .ParkingDetailPage {
-  height: 90vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: #f5f5f5;
 }
 
 .parkingDetailContainer {
   margin-top: 15px;
   width: 90%;
-  background-color: white;
+  background-color: #f5f5f5;
   border-radius: 10px;
   display: flex;
   flex-direction: column;
@@ -81,7 +79,7 @@
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  background: none;
+  background-color: white;
   border: #fc6c00 1px solid;
   border-radius: 7px;
   padding: 5px;
@@ -94,16 +92,21 @@
 
 .parkingDetailIsActive {
   margin-left: 10px;
-  color: blue;
+  color: #429cf5;
 }
 
 .parkingDetailIsNotActive {
   margin-left: 10px;
-  color: red;
+  color: #ff3233;
 }
 
 .arrowBackIcon {
   &:hover {
     cursor: pointer;
   }
+}
+
+.APAHeader {
+  margin-top: 30px;
+  width: 90%;
 }
