--- a/src/main/frontend/src/pages/Adminpage.module.css
+++ b/src/main/frontend/src/pages/Adminpage.module.css
@@ -1,14 +1,8 @@
-body {
-  margin: 0;
-  padding: 0;
-}
-
 .adminPage {
-  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #f5f5f5;
+  background-color: white;
   padding-top: 10px;
 }
 
@@ -18,11 +12,12 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-top: 20px;
 }
 
 .adminBody {
   width: 90%;
-  background-color: white;
+  background-color: #f5f5f5;
   border-radius: 10px;
   display: flex;
   justify-content: center;
