--- a/src/main/frontend/src/components/AddressPost.css
+++ b/src/main/frontend/src/components/AddressPost.css
@@ -1,35 +1,34 @@
 .addressPostModalStyle {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-Index: 999;
-    background-color: rgba(0, 0, 0, 0.5);
-    padding: 20px;
-    border-radius: 5px;
-    width: 100%;
-    height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 55%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 999;
+  background-color: rgba(0, 0, 0, 0.5);
+  padding: 20px;
+  border-radius: 5px;
+  width: 100%;
+  height: 100%;
 }
 
 .addressPostModalStyleNone {
-    display: none;
+  display: none;
 }
 
 .addressPostModalCloseBtn {
-    position: absolute;
-    top: -40px;
-    right: 0;
-    padding: 3px;
-    border: none;
-    border-radius: 5px;
-    color: white;
-    background: #CD853F;
-    cursor: pointer;
-    &:hover {
-        color: white;
-        background-color: #FFA07A;
-    }
+  position: absolute;
+  top: -40px;
+  right: 0;
+  padding: 3px 5px;
+  border: none;
+  border-radius: 5px;
+  color: white;
+  background-color: #fc6c00;
+  cursor: pointer;
+  &:hover {
+    font-weight: bold;
+  }
 }
