--- a/src/main/frontend/src/pages/ParkinglotPage.module.css
+++ b/src/main/frontend/src/pages/ParkinglotPage.module.css
@@ -23,7 +23,7 @@
 
 .parkingDetailHeader {
   display: flex;
-  align-items: end;
+  align-items: flex-end;
   padding-bottom: 5px;
   border-bottom: 1px solid lightgray;
 }
@@ -52,5 +52,33 @@
 
 .parkingDetailFooter {
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
+}
+
+.detailBtn {
+  border: #fc6c00 1px solid;
+  background: none;
+  color: #fc6c00;
+  border-radius: 7px;
+  margin: 5px 0;
+}
+
+.btnContainer {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+}
+
+.labelContainer {
+  display: flex;
+}
+
+.label {
+  width: 90px;
+  color: #212121;
+}
+
+.graytext {
+  color: #616161;
 }
