[FIX] fe css 수정

--- a/src/main/frontend/src/pages/CarPage.css
+++ b/src/main/frontend/src/pages/CarPage.css
@@ -27,9 +27,7 @@
   border: none;
   padding: 5px;
   cursor: pointer;
-  &:hover {
-    color: #ffa07a;
-  }
+  color: #fc6c00;
 }
 
 .carAddInputContainer {
