--- a/src/main/frontend/src/pages/AdminEnterPage.css
+++ b/src/main/frontend/src/pages/AdminEnterPage.css
@@ -1,7 +1,7 @@
 .centered-container {
   margin-top: 10%;
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: 25%;
+  margin-right: 25%;
   text-align: center;
 }
 
